--- a/css/index.css
+++ b/css/index.css
@@ -1,20 +1,51 @@
+body {
+    font-family: 'open sans', 'roboto', sans-serif;
+}
+
+
+h2 {
+    font-family: 'open sans', 'roboto', sans-serif;
+    text-align: center;
+}
+
 footer {
-    /* position: relative;
-    display: inline-block;
-    width: 0px auto;
-    margin-left: 1000px;
-    margin-bottom: 30px; */
     display: flex;
     width: 100%;
     justify-content: flex-end;
-  }
+}
+
+
+.mr-auto {
+    margin-left: 920px;
+}
   
-  .footer-links {
-    padding-right: 20px;
-  }
 
 
+.image-center {
+    text-align: center;
+}
 
+
+.display-4 {
+    text-align: center;
+    font-family: 'open sans', 'roboto', sans-serif;
+}
+
+.para {
+    text-align: center;
+    margin-left: 200px;
+    margin-right: 200px;
+
+}
+
+td, tr {
+    text-align: center;
+}
+
+
+.cardContainer {
+    padding: 20px 20px;
+}
 
 .card {
 margin-left: 120px;
@@ -26,8 +57,61 @@ margin-left: 120px;
     object-fit: cover;
 }
 
+
+
 .blockquote {
     background-color: #dddddd;
     text-align: center;
     font-style: italic;
+}
+
+
+.footer-links {
+    float: right;
+    margin-bottom: 30px;
+    margin-right: 30px;
+  }
+
+.links {
+    padding: 10px;
+}
+
+
+
+@media only screen and (max-width: 420px) {
+
+
+
+.para {
+    text-align: center;
+    margin: 10px;
+}
+
+.cardContainer {
+  grid-template-columns: 1fr;
+  margin-left: -130px;
+}
+
+.card-img-top {
+    width: 100%;
+    height: 60vw;
+    object-fit: cover;
+}
+
+
+
+.logo {
+  margin-left: 100px;
+}
+
+.footer-links {
+    float: right;
+    margin-right: 100px;
+  }
+
+.links {
+    padding: 10px;
+}
+
+
 }
